HTML email overhaul