@@ -1,16 +1,18 @@
 package org.iglooproject.basicapp.web.application.notification.service;
 
 import java.util.Date;
+import java.util.List;
 
 import org.apache.wicket.Component;
+import org.apache.wicket.Page;
 import org.apache.wicket.model.IModel;
 import org.apache.wicket.model.Model;
 import org.iglooproject.basicapp.core.business.notification.service.IBasicApplicationNotificationContentDescriptorFactory;
 import org.iglooproject.basicapp.core.business.user.model.User;
 import org.iglooproject.basicapp.core.util.ResourceKeyGenerator;
 import org.iglooproject.basicapp.core.util.binding.Bindings;
-import org.iglooproject.basicapp.web.application.notification.component.ExampleHtmlNotificationPanel;
-import org.iglooproject.basicapp.web.application.notification.component.UserPasswordRecoveryRequestHtmlNotificationPanel;
+import org.iglooproject.basicapp.web.application.notification.page.ExampleHtmlNotificationPage;
+import org.iglooproject.basicapp.web.application.notification.page.UserPasswordRecoveryRequestHtmlNotificationPage;
 import org.iglooproject.basicapp.web.application.security.password.page.SecurityPasswordCreationPage;
 import org.iglooproject.basicapp.web.application.security.password.page.SecurityPasswordResetPage;
 import org.iglooproject.spring.notification.model.INotificationContentDescriptor;
@@ -21,8 +23,6 @@ import org.iglooproject.wicket.more.notification.service.AbstractNotificationCon
 import org.iglooproject.wicket.more.notification.service.IWicketContextProvider;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import com.google.common.collect.ImmutableList;
 
 import igloo.wicket.model.BindingModel;
 
@@ -37,7 +37,7 @@ public class BasicApplicationNotificationContentDescriptorFactoryImpl
 	}
 
 	@Override
-	public INotificationContentDescriptor example(final User user, final Date date) {
+	public INotificationContentDescriptor example(User user, Date date) {
 		return new AbstractSimpleWicketNotificationDescriptor("notification.panel.example") {
 			@Override
 			public Object getSubjectParameter() {
@@ -45,22 +45,23 @@ public class BasicApplicationNotificationContentDescriptorFactoryImpl
 			}
 			@Override
 			public Iterable<?> getSubjectPositionalParameters() {
-				return ImmutableList.of(user.getFullName(), date);
+				return List.of(date);
 			}
 			@Override
-			public Component createComponent(String wicketId) {
-				return new ExampleHtmlNotificationPanel(wicketId, GenericEntityModel.of(user), Model.of(date));
+			public Page createPage() {
+				return new ExampleHtmlNotificationPage(Model.of(user), Model.of(date));
 			}
 			@Override
 			public Class<? extends Component> getComponentClass() {
-				return ExampleHtmlNotificationPanel.class;
+				return ExampleHtmlNotificationPage.class;
 			}
 		};
 	}
 
 	@Override
-	public INotificationContentDescriptor userPasswordRecoveryRequest(final User user) {
-		final ITwoParameterLinkDescriptorMapper<? extends IPageLinkGenerator, User, String> mapper;
+	public INotificationContentDescriptor userPasswordRecoveryRequest(User user, Date date) {
+		ITwoParameterLinkDescriptorMapper<? extends IPageLinkGenerator, User, String> mapper;
+		
 		switch (user.getPasswordRecoveryRequest().getType()) {
 		case CREATION:
 			mapper = SecurityPasswordCreationPage.MAPPER;
@@ -72,10 +73,9 @@ public class BasicApplicationNotificationContentDescriptorFactoryImpl
 			throw new IllegalStateException("Recovery request type unknown.");
 		}
 		
-		final ResourceKeyGenerator keyGenerator =
-			ResourceKeyGenerator.of("notification.panel.user.password.recovery.request")
-				.append(user.getPasswordRecoveryRequest().getType().name())
-				.append(user.getPasswordRecoveryRequest().getInitiator().name());
+		ResourceKeyGenerator keyGenerator = ResourceKeyGenerator.of("notification.panel.user.password.recovery.request")
+			.append(user.getPasswordRecoveryRequest().getType().name())
+			.append(user.getPasswordRecoveryRequest().getInitiator().name());
 		
 		return new AbstractSimpleWicketNotificationDescriptor(keyGenerator.resourceKey()) {
 			@Override
@@ -83,18 +83,19 @@ public class BasicApplicationNotificationContentDescriptorFactoryImpl
 				return GenericEntityModel.of(user);
 			}
 			@Override
-			public Component createComponent(String wicketId) {
+			public Page createPage() {
 				IModel<User> userModel = GenericEntityModel.of(user);
-				return new UserPasswordRecoveryRequestHtmlNotificationPanel<>(
-					wicketId,
+				return new UserPasswordRecoveryRequestHtmlNotificationPage<>(
 					keyGenerator,
-					userModel, userModel, Model.of(new Date()),
+					userModel,
+					userModel,
+					Model.of(new Date()),
 					mapper.map(userModel, BindingModel.of(userModel, Bindings.user().passwordRecoveryRequest().token()))
 				);
 			}
 			@Override
 			public Class<? extends Component> getComponentClass() {
-				return UserPasswordRecoveryRequestHtmlNotificationPanel.class;
+				return UserPasswordRecoveryRequestHtmlNotificationPage.class;
 			}
 		};
 	}
